# CitromTech

./: .gitattributes  .gitignore  BuildCMakeDependencies-MacOS.sh  BuildCMakeDependencies.bat  CMakeLists.txt  GenerateProject-Linux.sh  GenerateProject-MacOS.sh  GenerateProject-Windows.bat  premake5.lua
CitromTech/: CMakeLists.txt  Premake-CitromTech.lua
CitromTech/CitromTech/: CTL.h  CTLConfig.h  StaticArray.h
CitromTech/CitromTech/CitromTech.xcodeproj/: project.pbxproj
CitromTech/CitromTech/src/: ArgumentHandler.cpp  ArgumentHandler.h  CTLConfig.h  CitromAssert.cpp  CitromAssert.h  CitromMemory.cpp  CitromMemory.h  CitromTech.h  CitromUUID.cpp  CitromUUID.h  Core.h  ThreadPool.cpp  ThreadPool.h  test.cpp  test.h
CitromTech/CitromTech/src/Application/: ApplicationInfo.h  CTApplication.cpp
CitromTech/CitromTech/src/Audio/: AudioSystem.cpp  AudioSystem.h
CitromTech/CitromTech/src/AudioCommon/: SoundFile.cpp  SoundFile.h
CitromTech/CitromTech/src/CTL/: ANSIString.h  CStringHandling.cpp  CStringHandling.h  CTL.h  DArray.h  HashMap.h  HashSet.h  RefPointer.h  ScopedPointer.h  SmartPointers.h  StaticArray.h  String.cpp  String.h  TypeChecking.h
CitromTech/CitromTech/src/Core/: Predefs.h  Utils.h
CitromTech/CitromTech/src/EntitySystem/: Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
CitromTech/CitromTech/src/Events/: EventSystem.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
CitromTech/CitromTech/src/FileSystem/: FileSystem.h
CitromTech/CitromTech/src/ImGui/: ImGuiStyles.cpp  ImGuiStyles.h  ImGuiToolkit.cpp  (+1 more)
(+326 files in other folders)
